crates/biome_cli/tests/snapshots/main_commands_format/does_not_format_non_included_and_ignored_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": {
    "include": ["file1.js", "file2.js", "file3.js"],
    "ignore": ["file2.js"]
  },
  "formatter": {
    "include": ["file2.js"],
    "ignore": ["file3.js"]
  }
}
```

## `file1.js`

```js
statement();

```

## `file2.js`

```js
statement();

```

## `file3.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Formatted 3 file(s) in <TIME>
```


