crates/biome_cli/tests/snapshots/main_commands_format/doesnt_error_if_no_files_were_processed.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --no-errors-on-unmatched file.js
```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
