crates/biome_cli/tests/snapshots/main_commands_format/don_t_format_ignored_known_jsonc_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format . --write
```

## `biome.json`

```json
{
  "files": {
    "ignoreUnknown": true,
    "includes": ["**", "!.eslintrc"]
  }
}
```

## `.eslintrc`

```eslintrc
  statement(  )  
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
