crates/biome_cli/tests/snapshots/main_commands_format/format_empty_astro_files_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `file.astro`

```astro
<div></div>
```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


