crates/biome_cli/tests/snapshots/main_commands_format/format_empty_svelte_js_files_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.svelte
```

## `file.svelte`

```svelte
<div></div>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. No fixes applied.
```
